@@ -1,7 +1,7 @@
 plugins {
     id 'bisq.java-library'
     id 'application'
-   /* id 'distribution'*/ //todo as long we dont need a jar we leave that out, speeds up build
+    /* id 'distribution'*/ //todo as long we dont need a jar we leave that out, speeds up build
     alias(libs.plugins.openjfx)
     alias(libs.plugins.jpackage)
     alias(libs.plugins.shadow)
@@ -11,9 +11,7 @@ apply from: '../buildSrc/bisq-version.gradle'
 
 application {
     project.mainClassName = 'bisq.desktopapp.Main'
-    applicationDefaultJvmArgs = ['--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
-                                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED']
+    applicationDefaultJvmArgs = []
 }
 
 run {
@@ -67,11 +65,9 @@ dependencies {
 
     implementation libs.google.guava
 
-    implementation 'com.jfoenix:jfoenix:9.0.10'
     implementation 'de.jensd:fontawesomefx:8.0.0'
     implementation 'de.jensd:fontawesomefx-commons:9.1.2'
     implementation 'de.jensd:fontawesomefx-materialdesignfont:2.0.26-9.1.2'
-    implementation 'org.controlsfx:controlsfx:11.1.1'
 
     implementation "org.fxmisc.easybind:easybind:1.0.3"
     implementation 'org.fxmisc.richtext:richtextfx:0.10.9'
@@ -104,7 +100,7 @@ tasks.jpackage {
     verbose = false
 //    arguments = --arguments <main class arguments>
     destination = "$buildDir/$distsDirName"
-    input  = "$buildDir/$libsDirName"
+    input = "$buildDir/$libsDirName"
     licenseFile = "../LICENSE"
 //    resourceDir = --resource-dir <resource dir path> // TODO
     runtimeImage = System.getProperty("java.home")
@@ -152,11 +148,7 @@ tasks.jpackage {
 
     additionalParameters = ['--verbose']
 
-    javaOptions = [
-            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
-            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
-    ]
+    javaOptions = []
 
     doFirst() {
         jpackageTempDir.mkdirs()
